<resources>
    <string name="app_name">Список занятий</string>
    <string name="add_shop_item_content_description">Добавить нового ученика</string>
    <string name="add_payment_item">Добавить платеж</string>
    <string name="name_hint">Имя:</string>
    <string name="lastname_hint">Фамилия:</string>
    <string name="count_hint">Платежный баланс:</string>
    <string name="student_telephone">Телефон студента:</string>
    <string name="notes">Заметки</string>
    <string name="notes_hint">Заметки о ученике:</string>
    <string name="payment_name">Название платежа:</string>
    <string name="payment_desc">Описание платежа:</string>
    <string name="payment_price">Значение платежа:</string>
    <string name="payment_student">Студент ФИО:</string>
    <string name="payment_student_id">ИД студента:</string>
    <string name="payment_lessons_id">ИД урока:</string>
    <string name="group_hint">Группы ученика:</string>
    <string name="group_title">Название группы:</string>
    <string name="group_description">Описание группы:</string>
    <string name="group_student">Ученики группы:</string>
    <string name="lessons_name">Название урока:</string>
    <string name="lessons_description">Описание урока:</string>
    <string name="lessons_student">Ученики урока:</string>
    <string name="lessons_price">Стоимость урока:</string>
    <string name="lessons_date_start">Дата/Время начала урока:</string>
    <string name="lessons_date_end">Дата/Время конца урока:</string>
    <string name="lessons_date_start_repeat">Период начала повторения урока:</string>
    <string name="lessons_date_end_repeat">Период конца урока:</string>
    <string name="save_btn">Сохранить</string>
    <string name="go_list_btn">назад к списку</string>
    <string name="nav_header_dept">долги</string>
    <string name="change_btn">Изменить</string>
    <string name="payment_student_btn">Платежи студента</string>
    <string name="payment_lesson_btn">Платежи урока</string>
    <string name="image_btn_add">Добавить картинку</string>
    <string name="payment_lesson_btn_add">Пополнить баланс</string>
    <string name="payment_payment_off">Списать долг</string>
    <string name="error_input_name">Некоректное имя</string>
    <string name="error_input_last_name">Некоректная фамилия</string>
    <string name="error_input_payment_balance">Некорректное значение баланса</string>
    <string name="error_input_phone">Некоректное значение номера телефона</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="add_lessons_item_content_description">добавить урок</string>
    <string name="registration_name">Ваше имя</string>
    <string name="registration_ser_name">Ваша фамилия</string>
    <string name="registration_phone">Ваш телефон</string>
    <string name="registration_email">Ваша почта</string>
    <string name="registration_password">Ваш пароль</string>
    <string name="registration_repeat_password">Повторите пароль</string>
    <string name="registration_button">Зарегистрироваться</string>
    <string name="register_checkbox">Я принимаю условия Пользовательского соглашения и условия Политики конфиденциальности.</string>
    <string name="login_button">Войти</string>
    <string name="login_checkbox">Запомнить меня</string>
    <string name="link_login_fragment">войти</string>
    <string name="link_register_fragment">зарегистрироваться</string>
    <string name="drawerMenuItem1">Инструкция</string>
    <string name="drawerMenuItem4">Уведомления</string>
    <string name="drawerMenuItem2">О приложение</string>
    <string name="drawerMenuItem3">Выход</string>
    <string name="list_student_lessons">Список учеников.</string>
    <string name="text_info_repeat">Урок будет повторяться по заданную дату в выбранный день недели.</string>
    <string name="lessons_price_sale">сумма скидки</string>
    <string name="lessons_price_sale_buttom">Сохранить скидки</string>
    <string name="text_info_notifications">Уведомление придет в указанное время дня урока</string>
    <string name="lessons_value_notifications">Укажите время</string>
    <string name="button_switch_payment">переключить</string>
    <string name="txt_choice_all">выбрать все</string>
    <string name="txt_delete">удалить</string>
    <string name="text_label_tab_1">сегодня</string>
    <string name="text_label_tab_2">прошедшие</string>
    <string name="change_date_lessons">Изменить дату урока</string>
    <string name="repeat_lessons">Повторять урок</string>
    <string name="notify_start">Уведомить до начала</string>
    <string name="student">Студенты</string>
    <string name="groups">Группы</string>
    <string name="close_button">Закрыть</string>
    <string name="title_about">О приложении:</string>
    <string name="description_about">Список занятий — надежный помощник преподавателя, который поможет вам легко планировать занятия, отмечать платежи, отслеживать долги студентов и просматривать информацию о доходах. Потратив несколько минут на знакомство с этим простым приложением, вы значительно облегчите себе жизнь! В электронном помощнике есть все необходимое для организации работы (календарь с подсказками, отчеты об оплате, финансы, контакты учеников). \n\n Больше не нужно вести дневники и использовать электронные таблицы. Список занятий для преподавателя благодаря своему функционалу позволит: создавать занятия с учениками в календаре (в том числе групповые), отмечать оплату, просматривать общий доход, вносить данные учеников, переносить занятия, дублировать занятия на следующие недели, указывать продолжительность урока и многое другое. \n\n Приложение отображает расписание занятий в виде календаря или списка.\n Для визуального удобства запланированные занятия отмечены синими точками под датой в календаре.\n Если урок успешно оплачен учеником, точка в календаре будет отображаться зеленым цветом, если по уроку возник долг красным.\n Приложение позволяет создавать групповые уроки, а также редактировать стоимость, продолжительность урока и учеников, с которыми проводится урок до его истечения.\n В приложение легко делать сохранение/восстановление Ваших данных.</string>
    <string name="no_exists_group">групп пока нет</string>
    <string name="title_instructions">Инструкция:</string>
    <string name="start_work_instruction">1 Начало работы</string>
    <string name="payments_tab_instruction">2 Вкладка платежи.</string>
    <string name="tabs_groups_instruction">3 Вкладка группы.</string>
    <string name="tab_lessons_instruction">4 Вкладка уроки.</string>
    <string name="tab_student_instruction">5 Вкладка ученики.</string>
    <string name="student_button">Студенты</string>
    <string name="put_notifications">Изменить/поставить уведомление</string>
    <string name="students">Студенты</string>
    <string name="sale">Скидки</string>
    <string name="name_lessons">Название урока</string>
    <string name="name_students">ФИО студента:</string>
    <string name="date_payment">Дата платежа:</string>
    <string name="summ_payment">Сумма платежа:</string>
    <string name="status_payment">Статус платежа:</string>
    <string name="telephone_student">Телефон студента</string>
    <string name="contact_parents">Контакты родителей</string>
    <string name="notes_student">Заметки о студенте</string>
    <string name="top_up_balance">Пополнить баланс</string>
    <string name="student_groups">Группы студента</string>
    <string name="payment_students">Платежи студента</string>
    <string name="save_exit">Сохранить/Выйти</string>
    <string name="delete">Удалить</string>
    <string name="Income_information">Сведения по доходам</string>
    <string name="expected_income">ожидаемый доход</string>
    <string name="actual_income">фактический доход</string>
    <string name="debts">долгов</string>
    <string name="number_of_all_lessons">Количество всех уроков:</string>
    <string name="planned">Запланированных</string>
    <string name="conducted">Проведенных</string>
    <string name="list_of_all_payments">Список всех оплат:</string>
    <string name="unpaid">Неоплаченных</string>
    <string name="paid">Оплаченных</string>
    <string name="number_of_groups">Колличество групп</string>
    <string name="meaning_of_groups">значение групп</string>
    <string name="number_of_students">Количество учеников</string>
    <string name="value_student">значение учеников</string>
    <string name="parents">Родители</string>
    <string name="price_lessons">Цена урока:</string>
    <string name="time_start_lessons">Время начала урока:</string>
    <string name="pay_yes">Оплачен:</string>
    <string name="yes">да</string>
    <string name="no">нет</string>
    <string name="offers_about">По вопросам и предложениям обращаться по адресу:</string>
    <string name="offers_email">creatorweb77@gmail.com\n</string>
    <string name="no_student_in_group">Ученик не присутствует не в одной из групп.</string>
</resources>
