<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.listlessons.lessonslist.presentation.payment.PaymentItemViewModel"
            />
    </data>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <RelativeLayout
        android:id="@+id/layout_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp">

        <!--image view for displaying course image-->
        <ImageView
            android:id="@+id/idIVCourse"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="@drawable/ic_baseline_add_a_photo_24"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_baseline_add_a_photo_24" />

        <!--text view for displaying course name-->
        <TextView
            android:id="@+id/idTVCourseTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/idIVCourse"
            android:text="@string/lessons_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/idTVCourseName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/idTVCourseTitle"
            android:text="@{viewModel.paymentItem.title}"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
        <!--text view for displaying course tracks-->
        <TextView
            android:id="@+id/idTVCourseTracksTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idTVCourseTitle"
            android:layout_toEndOf="@id/idIVCourse"
            android:layout_marginTop="10dp"
            android:text="@string/price_lessons"
            android:textColor="@color/black"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/idTVCourseTracks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/idTVCourseTitle"
            android:layout_alignEnd ="@+id/idTVCourseTracksTitle"
            android:layout_marginTop="10dp"
            android:text="@{viewModel.paymentItem.price}"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <!--text view for displaying course duration-->
        <TextView
            android:id="@+id/idTVCourseDurationTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idTVCourseTracks"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/idIVCourse"
            android:text="@string/time_start_lessons"
            android:textColor="@color/black"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/idTVCourseDurationValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/idTVCourseTitle"
            android:layout_alignEnd ="@+id/idTVCourseDurationTitle"
            android:layout_marginTop="40dp"
            android:text="@{viewModel.paymentItem.datePayment}"
            android:textColor="@color/black"
            android:textSize="15sp" />
        <!--text view for displaying course duration-->
        <TextView
            android:id="@+id/idTVCourseDurationTitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/idTVCourseDurationValue"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/idIVCourse"
            android:text="@string/pay_yes"
            android:textColor="@color/black"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/idTVCourseDurationValue2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/idTVCourseDurationValue"
            android:layout_alignEnd ="@+id/idTVCourseDurationTitle2"
            android:layout_marginTop="10dp"
            android:text="@string/yes"
            android:textColor="@color/black"
            android:textSize="15sp" />
        <!--button for dismissing our dialog-->
        <Button
            android:id="@+id/idBtnDismiss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idIVCourse"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/no"
            android:textAllCaps="false" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>
</layout>